// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics / NgModule / forRoot() pattern Chips group 1`] = `
<storybook-wrapper>
  <storybook-chips-group
    ng-reflect-chips="[object Object],[object Object"
  >
    
    <storybook-chip
      class="chip"
      ng-reflect-display-text="Chip 1"
      style="background-color: rgb(255, 84, 84);"
    >
      <span
        class="text"
      >
        Chíp 1
      </span>
      <div
        class="remove"
      >
        <span
          class="x"
        >
          ✕
        </span>
      </div>
    </storybook-chip>
    <storybook-chip
      class="chip"
      ng-reflect-display-text="Chip 2"
      style="background-color: rgb(255, 84, 84);"
    >
      <span
        class="text"
      >
        Chíp 2
      </span>
      <div
        class="remove"
      >
        <span
          class="x"
        >
          ✕
        </span>
      </div>
    </storybook-chip>
    
    <div
      class="remove-all"
    >
       Remove All 
    </div>
  </storybook-chips-group>
</storybook-wrapper>
`;

exports[`Storyshots Basics / NgModule / forRoot() pattern Chips group with overridden provider 1`] = `
<storybook-wrapper>
  <storybook-chips-group
    ng-reflect-chips="[object Object],[object Object"
  >
    
    <storybook-chip
      class="chip"
      ng-reflect-display-text="Chip 1"
      style="background-color: yellow;"
    >
      <span
        class="text"
      >
        Chíp 1
      </span>
      <div
        class="remove"
      >
        <span
          class="x"
        >
          ✕
        </span>
      </div>
    </storybook-chip>
    <storybook-chip
      class="chip"
      ng-reflect-display-text="Chip 2"
      style="background-color: yellow;"
    >
      <span
        class="text"
      >
        Chíp 2
      </span>
      <div
        class="remove"
      >
        <span
          class="x"
        >
          ✕
        </span>
      </div>
    </storybook-chip>
    
    <div
      class="remove-all"
    >
       Remove All 
    </div>
  </storybook-chips-group>
</storybook-wrapper>
`;
